22.03.2/targets/imx/cortexa7/index.md
---
---

# [archive](/archive/) / [22.03.2](/archive/22.03.2/) / [targets](/archive/22.03.2/targets/) / [imx](/archive/22.03.2/targets/imx/) / cortexa7


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 📁 [packages](packages) | | |
| 🗄️ [config.buildinfo](./config.buildinfo) | 8.0K | |
| 🗄️ [feeds.buildinfo](./feeds.buildinfo) | 4.0K | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-aqara_zhwg11lm-squashfs-rootfs.bin](./openlumi-22.03.2-imx-cortexa7-aqara_zhwg11lm-squashfs-rootfs.bin) | 5.8M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-aqara_zhwg11lm-squashfs-sysupgrade.bin](./openlumi-22.03.2-imx-cortexa7-aqara_zhwg11lm-squashfs-sysupgrade.bin) | 9.1M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-aqara_zhwg11lm-zImage](./openlumi-22.03.2-imx-cortexa7-aqara_zhwg11lm-zImage) | 3.3M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-imx6ull-aqara-zhwg11lm.dtb](./openlumi-22.03.2-imx-cortexa7-imx6ull-aqara-zhwg11lm.dtb) | 28K | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-imx6ull-xiaomi-dgnwg05lm.dtb](./openlumi-22.03.2-imx-cortexa7-imx6ull-xiaomi-dgnwg05lm.dtb) | 28K | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-rootfs.tar.gz](./openlumi-22.03.2-imx-cortexa7-rootfs.tar.gz) | 4.8M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-rootfs.bin](./openlumi-22.03.2-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-rootfs.bin) | 8.2M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-sysupgrade.bin](./openlumi-22.03.2-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-sysupgrade.bin) | 12M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7-xiaomi_dgnwg05lm-zImage](./openlumi-22.03.2-imx-cortexa7-xiaomi_dgnwg05lm-zImage) | 3.3M | |
| 🗄️ [openlumi-22.03.2-imx-cortexa7.manifest](./openlumi-22.03.2-imx-cortexa7.manifest) | 8.0K | |
| 🗄️ [profiles.json](./profiles.json) | 4.0K | |
| 🗄️ [sha256sums](./sha256sums) | 4.0K | |
| 🗄️ [version.buildinfo](./version.buildinfo) | 4.0K | |

