23.05.4/targets/imx/cortexa7/index.md
---
---

# [archive](/archive/) / [23.05.4](/releases/23.05.4/) / [targets](/releases/23.05.4/targets/) / [imx](/releases/23.05.4/targets/imx/) / cortexa7


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 📁 [packages](packages) | | |
| 📁 [u-boot-xiaomi_dgnwg05lm](u-boot-xiaomi_dgnwg05lm) | | |
| 🗄️ [config.buildinfo](./config.buildinfo) | 8.0K | |
| 🗄️ [feeds.buildinfo](./feeds.buildinfo) | 4.0K | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-aqara_zhwg11lm-squashfs-rootfs.bin](./openlumi-23.05.4-imx-cortexa7-aqara_zhwg11lm-squashfs-rootfs.bin) | 5.7M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-aqara_zhwg11lm-squashfs-sysupgrade.bin](./openlumi-23.05.4-imx-cortexa7-aqara_zhwg11lm-squashfs-sysupgrade.bin) | 9.4M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-aqara_zhwg11lm-zImage](./openlumi-23.05.4-imx-cortexa7-aqara_zhwg11lm-zImage) | 3.7M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-geniatech_gtw360-squashfs-rootfs.bin](./openlumi-23.05.4-imx-cortexa7-geniatech_gtw360-squashfs-rootfs.bin) | 7.6M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-geniatech_gtw360-squashfs-sysupgrade.bin](./openlumi-23.05.4-imx-cortexa7-geniatech_gtw360-squashfs-sysupgrade.bin) | 12M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-geniatech_gtw360-zImage](./openlumi-23.05.4-imx-cortexa7-geniatech_gtw360-zImage) | 3.8M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-imx6ull-aqara-zhwg11lm.dtb](./openlumi-23.05.4-imx-cortexa7-imx6ull-aqara-zhwg11lm.dtb) | 28K | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-imx6ull-gtw360.dtb](./openlumi-23.05.4-imx-cortexa7-imx6ull-gtw360.dtb) | 28K | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-imx6ull-xiaomi-dgnwg05lm.dtb](./openlumi-23.05.4-imx-cortexa7-imx6ull-xiaomi-dgnwg05lm.dtb) | 28K | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-rootfs.tar.gz](./openlumi-23.05.4-imx-cortexa7-rootfs.tar.gz) | 4.5M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-rootfs.bin](./openlumi-23.05.4-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-rootfs.bin) | 8.1M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-sysupgrade.bin](./openlumi-23.05.4-imx-cortexa7-xiaomi_dgnwg05lm-squashfs-sysupgrade.bin) | 12M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7-xiaomi_dgnwg05lm-zImage](./openlumi-23.05.4-imx-cortexa7-xiaomi_dgnwg05lm-zImage) | 3.7M | |
| 🗄️ [openlumi-23.05.4-imx-cortexa7.manifest](./openlumi-23.05.4-imx-cortexa7.manifest) | 8.0K | |
| 🗄️ [profiles.json](./profiles.json) | 4.0K | |
| 🗄️ [sha256sums](./sha256sums) | 4.0K | |
| 🗄️ [version.buildinfo](./version.buildinfo) | 4.0K | |

